--- a/Main Paper/refer.bib
+++ b/Main Paper/refer.bib
@@ -329,3 +329,12 @@
   pages={56--71},
   year={2020}
 }
+
+@Manual{Rmanual,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2021},
+    url = {https://www.R-project.org/},
+}
